cqlparser/CQLParser.py
# Generated from ./CQL.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CQLParser ( Parser ):

    grammarFileName = "CQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "':'", "'!='", "','", "'->'", "'WITHIN'", 
                     "'CONTAINING'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'<'", "'>'", "'/'", "'='", 
                     "'['", "']'", "'('", "')'", "'!'", "'*'", "'+'", "'?'", 
                     "'{'", "'}'", "'&'", "'|'", "'-'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "WITHIN", "CONTAINING", "NAME", "NUMBER", 
                      "DOUBLE_QUOTED_STRING", "SINGLE_QUOTED_STRING", "WS", 
                      "LT", "GT", "SOLIDUS", "EQUALS", "LEFT_SQUARE_BRACKET", 
                      "RIGHT_SQUARE_BRACKET", "LEFT_PARENTHESIS", "RIGHT_PARENTHESIS", 
                      "EXCLAMATION_MARK", "ASTERISK", "PLUS", "QUESTION_MARK", 
                      "LEFT_CURLY_BRACKET", "LEFT_RIGHT_BRACKET", "AMPERSAND", 
                      "VERTICAL_LINE", "HYPHEN_MINUS" ]

    RULE_query = 0
    RULE_complexQuery = 1
    RULE_queryOperator = 2
    RULE_simpleQuery = 3
    RULE_sequence = 4
    RULE_sequencePart = 5
    RULE_tag = 6
    RULE_attribute = 7
    RULE_position = 8
    RULE_positionWord = 9
    RULE_positionLong = 10
    RULE_positionLongPart = 11
    RULE_attValuePair = 12
    RULE_propName = 13
    RULE_repetitionAmount = 14
    RULE_quotedString = 15
    RULE_booleanOperator = 16
    RULE_valuePart = 17
    RULE_value = 18

    ruleNames =  [ "query", "complexQuery", "queryOperator", "simpleQuery", 
                   "sequence", "sequencePart", "tag", "attribute", "position", 
                   "positionWord", "positionLong", "positionLongPart", "attValuePair", 
                   "propName", "repetitionAmount", "quotedString", "booleanOperator", 
                   "valuePart", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    WITHIN=5
    CONTAINING=6
    NAME=7
    NUMBER=8
    DOUBLE_QUOTED_STRING=9
    SINGLE_QUOTED_STRING=10
    WS=11
    LT=12
    GT=13
    SOLIDUS=14
    EQUALS=15
    LEFT_SQUARE_BRACKET=16
    RIGHT_SQUARE_BRACKET=17
    LEFT_PARENTHESIS=18
    RIGHT_PARENTHESIS=19
    EXCLAMATION_MARK=20
    ASTERISK=21
    PLUS=22
    QUESTION_MARK=23
    LEFT_CURLY_BRACKET=24
    LEFT_RIGHT_BRACKET=25
    AMPERSAND=26
    VERTICAL_LINE=27
    HYPHEN_MINUS=28

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def complexQuery(self):
            return self.getTypedRuleContext(CQLParser.ComplexQueryContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = CQLParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_query)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 38
            self.complexQuery()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComplexQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simpleQuery(self):
            return self.getTypedRuleContext(CQLParser.SimpleQueryContext,0)


        def queryOperator(self):
            return self.getTypedRuleContext(CQLParser.QueryOperatorContext,0)


        def complexQuery(self):
            return self.getTypedRuleContext(CQLParser.ComplexQueryContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_complexQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComplexQuery" ):
                listener.enterComplexQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComplexQuery" ):
                listener.exitComplexQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComplexQuery" ):
                return visitor.visitComplexQuery(self)
            else:
                return visitor.visitChildren(self)




    def complexQuery(self):

        localctx = CQLParser.ComplexQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_complexQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.simpleQuery()
            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5 or _la==6:
                self.state = 41
                self.queryOperator()
                self.state = 42
                self.complexQuery()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryOperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CQLParser.RULE_queryOperator

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WithinContext(QueryOperatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQLParser.QueryOperatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WITHIN(self):
            return self.getToken(CQLParser.WITHIN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWithin" ):
                listener.enterWithin(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWithin" ):
                listener.exitWithin(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWithin" ):
                return visitor.visitWithin(self)
            else:
                return visitor.visitChildren(self)


    class ContainingContext(QueryOperatorContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQLParser.QueryOperatorContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CONTAINING(self):
            return self.getToken(CQLParser.CONTAINING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContaining" ):
                listener.enterContaining(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContaining" ):
                listener.exitContaining(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContaining" ):
                return visitor.visitContaining(self)
            else:
                return visitor.visitChildren(self)



    def queryOperator(self):

        localctx = CQLParser.QueryOperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_queryOperator)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [5]:
                localctx = CQLParser.WithinContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.match(CQLParser.WITHIN)
                pass
            elif token in [6]:
                localctx = CQLParser.ContainingContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(CQLParser.CONTAINING)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleQueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequence(self):
            return self.getTypedRuleContext(CQLParser.SequenceContext,0)


        def booleanOperator(self):
            return self.getTypedRuleContext(CQLParser.BooleanOperatorContext,0)


        def simpleQuery(self):
            return self.getTypedRuleContext(CQLParser.SimpleQueryContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_simpleQuery

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleQuery" ):
                listener.enterSimpleQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleQuery" ):
                listener.exitSimpleQuery(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleQuery" ):
                return visitor.visitSimpleQuery(self)
            else:
                return visitor.visitChildren(self)




    def simpleQuery(self):

        localctx = CQLParser.SimpleQueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simpleQuery)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.sequence()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 201326608) != 0):
                self.state = 51
                self.booleanOperator()
                self.state = 52
                self.simpleQuery()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sequencePart(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CQLParser.SequencePartContext)
            else:
                return self.getTypedRuleContext(CQLParser.SequencePartContext,i)


        def getRuleIndex(self):
            return CQLParser.RULE_sequence

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequence" ):
                listener.enterSequence(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequence" ):
                listener.exitSequence(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequence" ):
                return visitor.visitSequence(self)
            else:
                return visitor.visitChildren(self)




    def sequence(self):

        localctx = CQLParser.SequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sequence)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 56
                self.sequencePart()
                self.state = 59 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 333696) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SequencePartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tag(self):
            return self.getTypedRuleContext(CQLParser.TagContext,0)


        def position(self):
            return self.getTypedRuleContext(CQLParser.PositionContext,0)


        def LEFT_PARENTHESIS(self):
            return self.getToken(CQLParser.LEFT_PARENTHESIS, 0)

        def complexQuery(self):
            return self.getTypedRuleContext(CQLParser.ComplexQueryContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(CQLParser.RIGHT_PARENTHESIS, 0)

        def repetitionAmount(self):
            return self.getTypedRuleContext(CQLParser.RepetitionAmountContext,0)


        def NAME(self):
            return self.getToken(CQLParser.NAME, 0)

        def NUMBER(self):
            return self.getToken(CQLParser.NUMBER, 0)

        def getRuleIndex(self):
            return CQLParser.RULE_sequencePart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequencePart" ):
                listener.enterSequencePart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequencePart" ):
                listener.exitSequencePart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSequencePart" ):
                return visitor.visitSequencePart(self)
            else:
                return visitor.visitChildren(self)




    def sequencePart(self):

        localctx = CQLParser.SequencePartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_sequencePart)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7 or _la==8:
                self.state = 61
                _la = self._input.LA(1)
                if not(_la==7 or _la==8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 62
                self.match(CQLParser.T__0)


            self.state = 71
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                self.state = 65
                self.tag()
                pass
            elif token in [9, 10, 16]:
                self.state = 66
                self.position()
                pass
            elif token in [18]:
                self.state = 67
                self.match(CQLParser.LEFT_PARENTHESIS)
                self.state = 68
                self.complexQuery()
                self.state = 69
                self.match(CQLParser.RIGHT_PARENTHESIS)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 74
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 31457280) != 0):
                self.state = 73
                self.repetitionAmount()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LT(self):
            return self.getToken(CQLParser.LT, 0)

        def NAME(self):
            return self.getToken(CQLParser.NAME, 0)

        def GT(self):
            return self.getToken(CQLParser.GT, 0)

        def SOLIDUS(self, i:int=None):
            if i is None:
                return self.getTokens(CQLParser.SOLIDUS)
            else:
                return self.getToken(CQLParser.SOLIDUS, i)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CQLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(CQLParser.AttributeContext,i)


        def getRuleIndex(self):
            return CQLParser.RULE_tag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTag" ):
                listener.enterTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTag" ):
                listener.exitTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTag" ):
                return visitor.visitTag(self)
            else:
                return visitor.visitChildren(self)




    def tag(self):

        localctx = CQLParser.TagContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tag)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(CQLParser.LT)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 77
                self.match(CQLParser.SOLIDUS)


            self.state = 80
            self.match(CQLParser.NAME)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==7:
                self.state = 81
                self.attribute()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 87
                self.match(CQLParser.SOLIDUS)


            self.state = 90
            self.match(CQLParser.GT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(CQLParser.NAME, 0)

        def EQUALS(self):
            return self.getToken(CQLParser.EQUALS, 0)

        def quotedString(self):
            return self.getTypedRuleContext(CQLParser.QuotedStringContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_attribute

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttribute" ):
                listener.enterAttribute(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttribute" ):
                listener.exitAttribute(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttribute" ):
                return visitor.visitAttribute(self)
            else:
                return visitor.visitChildren(self)




    def attribute(self):

        localctx = CQLParser.AttributeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_attribute)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(CQLParser.NAME)
            self.state = 93
            self.match(CQLParser.EQUALS)
            self.state = 94
            self.quotedString()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CQLParser.RULE_position

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PositionPositionWordContext(PositionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQLParser.PositionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def positionWord(self):
            return self.getTypedRuleContext(CQLParser.PositionWordContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionPositionWord" ):
                listener.enterPositionPositionWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionPositionWord" ):
                listener.exitPositionPositionWord(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionPositionWord" ):
                return visitor.visitPositionPositionWord(self)
            else:
                return visitor.visitChildren(self)


    class PositionPositionLongContext(PositionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CQLParser.PositionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LEFT_SQUARE_BRACKET(self):
            return self.getToken(CQLParser.LEFT_SQUARE_BRACKET, 0)
        def RIGHT_SQUARE_BRACKET(self):
            return self.getToken(CQLParser.RIGHT_SQUARE_BRACKET, 0)
        def positionLong(self):
            return self.getTypedRuleContext(CQLParser.PositionLongContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionPositionLong" ):
                listener.enterPositionPositionLong(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionPositionLong" ):
                listener.exitPositionPositionLong(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionPositionLong" ):
                return visitor.visitPositionPositionLong(self)
            else:
                return visitor.visitChildren(self)



    def position(self):

        localctx = CQLParser.PositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_position)
        self._la = 0 # Token type
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9, 10]:
                localctx = CQLParser.PositionPositionWordContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.positionWord()
                pass
            elif token in [16]:
                localctx = CQLParser.PositionPositionLongContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(CQLParser.LEFT_SQUARE_BRACKET)
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1312384) != 0):
                    self.state = 98
                    self.positionLong()


                self.state = 101
                self.match(CQLParser.RIGHT_SQUARE_BRACKET)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionWordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quotedString(self):
            return self.getTypedRuleContext(CQLParser.QuotedStringContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_positionWord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionWord" ):
                listener.enterPositionWord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionWord" ):
                listener.exitPositionWord(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionWord" ):
                return visitor.visitPositionWord(self)
            else:
                return visitor.visitChildren(self)




    def positionWord(self):

        localctx = CQLParser.PositionWordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_positionWord)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.quotedString()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionLongContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def positionLongPart(self):
            return self.getTypedRuleContext(CQLParser.PositionLongPartContext,0)


        def booleanOperator(self):
            return self.getTypedRuleContext(CQLParser.BooleanOperatorContext,0)


        def positionLong(self):
            return self.getTypedRuleContext(CQLParser.PositionLongContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_positionLong

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionLong" ):
                listener.enterPositionLong(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionLong" ):
                listener.exitPositionLong(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionLong" ):
                return visitor.visitPositionLong(self)
            else:
                return visitor.visitChildren(self)




    def positionLong(self):

        localctx = CQLParser.PositionLongContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_positionLong)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.positionLongPart()
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 201326608) != 0):
                self.state = 107
                self.booleanOperator()
                self.state = 108
                self.positionLong()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionLongPartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attValuePair(self):
            return self.getTypedRuleContext(CQLParser.AttValuePairContext,0)


        def LEFT_PARENTHESIS(self):
            return self.getToken(CQLParser.LEFT_PARENTHESIS, 0)

        def positionLong(self):
            return self.getTypedRuleContext(CQLParser.PositionLongContext,0)


        def RIGHT_PARENTHESIS(self):
            return self.getToken(CQLParser.RIGHT_PARENTHESIS, 0)

        def EXCLAMATION_MARK(self):
            return self.getToken(CQLParser.EXCLAMATION_MARK, 0)

        def positionLongPart(self):
            return self.getTypedRuleContext(CQLParser.PositionLongPartContext,0)


        def getRuleIndex(self):
            return CQLParser.RULE_positionLongPart

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionLongPart" ):
                listener.enterPositionLongPart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionLongPart" ):
                listener.exitPositionLongPart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionLongPart" ):
                return visitor.visitPositionLongPart(self)
            else:
                return visitor.visitChildren(self)




    def positionLongPart(self):

        localctx = CQLParser.PositionLongPartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_positionLongPart)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.attValuePair()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 113
                self.match(CQLParser.LEFT_PARENTHESIS)
                self.state = 114
                self.positionLong()
                self.state = 115
                self.match(CQLParser.RIGHT_PARENTHESIS)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 117
                self.match(CQLParser.EXCLAMATION_MARK)
                self.state = 118
                self.positionLongPart()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

